[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"

[dependencies.hal]
package = "stm32f1xx-hal"
version = "0.5.3"
features = ["rt", "stm32f103", "medium"]

